aop - cglib dynamic proxy - 不同于JDK动态代理在运行期为接口生成对象的代理对象, 基于Cglib动态代理可以在运行期动态构建字节码的class文件, 为类生成子类, 因此被代理类不需要集成任何接口